# L.X.P-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/lxp_agent/: __init__.py  agent.py  cli.py  intent.py  protocol.py
tests/: test_protocol.py
